@@ -5,6 +5,7 @@
 * Fix - PayPal standard Redirection Issue.
 * Fix - Form Field deletion with delete button.
 * Fix - CSV textarea contents line break issue.
+* Fix - Signature field display with smart tags.
 * Fix - Welcome page redirection on every plugin updates.
 * Fix - New Email Notifications not being saved on reload.
 * Fix - New Email Notifications cloned blank for assigned values.
